2000-11-09 Sami Pesonen <spesonen@dlc.fi>

	* genhtml.pl: Added Finnish entries.
	* genhtml-pango.pl: Added Finnish entries.
	* genhtml-release.pl: Added Finnish entries.
	
2000-11-03  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* genhtml.pl: Add Japanese translation.

2000-10-30  Kjartan Maraas  <kmaraas@gnome.org>

	* status.pl: Added Serbian (Latin).
	
2000-10-26  Robert Brady  <robert@suse.co.uk>

	* status.pl: Add Tamil.

2000-10-23  Chrtistophe Merlet  <christophe@merlet.net>

	* genhtml.pl: Added French entries. Added headers to
	generated page. Suggestion by Martin Quinson.

2000-10-18  Almer S. Tigelaar  <almer1@dds.nl>

	* genhtml: Added Dutch entries.
	* genhtml-pango.pl: Added Dutch entries.
	* genhtml-release.pl: Added Dutch entries.

2000-10-07  Christian Meyer  <cm@ggtt.de>

	* genhtml: Fixed German entries.
	* genhtml-pango.pl: Fixed German entries.
	* genhtml-release.pl: Fixed German entries.
	
2000-09-29  Christian Rose  <menthos@menthos.com>

	* genhtml.pl: Fixed Swedish entries.
	* genhtml-pango.pl: Fixed Swedish entries.
	* genhtml-release.pl: Fised Swedish entries.

2000-09-29  Christian Meyer <cm@ggtt.de>

	* genhtml.pl: Added German entries.
	* genhtml-pango.pl: Added German entries.
	* genhtml-release.pl: Added German entries.
	
2000-09-07  Robert brady  <rwb197@zepler.org>

	* genhtml-pango.pl, status-pango.pl: Added scripts to
	generate status of modules that make use of Pango,
	to avoid polluting the main status page with statistics
	on languages those modules cannot support.

2000-09-01  Yuri Syrota	<rasta@renome.rovno.ua>
	
	* genhtml.pl: Added Ukrainian entries.
	* genhtml-release.pl: Added Ukrainian entries.
	
2000-07-20  Fatih Demir	<kabalak@gmx.net>
	
	* genhtml.pl & genhtml-release.pl: Added the	
		Turkish entries.