@@ -16,7 +16,7 @@
 
 
 @langs = qw ( ar as bn fa gu he hi ja ko ml mr or pa si ta te ur
-              zh_TW.Big5 zh_CN.GB2312 );
+              zh_TW zh_CN );
 
 $cvsroot = "/home/kmaraas/cvs/gnome/1";
 $htmldir = "/home/kmaraas/cvs/gnome/web-devel-2/content/projects/gtp/status/pango";
