@@ -1,3 +1,7 @@
+2000-11-10  Robert Brady  <robert@suse.co.uk>
+
+	* *.pl: Sawfish has moved.
+
 2000-11-09 Sami Pesonen <spesonen@dlc.fi>
 
 	* genhtml.pl: Added Finnish entries.
